﻿- Ensure 'copy current configuration' button is disabled when not in-game


Version 0.9.2 -

- New feature: option to disable vanilla tree tool network tree replacement (no more snapping to networks)


Version 0.9.1 -

- New feature: combined prop/tree mode - replace props (in buildings or networks) with trees, or vice-versa
- The spacing of repeated network trees/props can now be adjusted (individual mode only)
- BOB tool now recognises the underground (PageDown/PageUp to switch)
- Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
- Prop/tree position highlighting is dimmed when shift is pressed and disabled while Alt is pressed
- Random prop list now refreshes if displayed when random prop setup panel is closed
- Fix building sliders not resetting to original positions when building preview is reverted
- Fix preview rotation resetting if position changes are made immediately after applying a rotation change
- Update bundled UUI API (2.2.1)


Version 0.9.0.4 -

- Mirrored network props now also mirror their rotation
- Fix preview sometimes showing incorrect prop angles
- Fix building prop list sometimes not showing original prop name


Version 0.9.0.3 -

- Fix network replacement original prefab regression


Version 0.9.0.2 -

- Improve handling of reversion states
- Fix network prop preview not correctly showing mirrored X offsets
- Fix network prop preview not showing angle changes


Version 0.9.0.1 -

- Fix index-out-of-range error related to previewing changes in sub-buildings
- Fix live previewing not auto-refreshing immediately after replacement
- Fix render highlights not following preview prop changes
- Fix previewing not resetting on sub-building selection change
- Fix 'no trees/props found' message sometimes not showing when replacer panel is opened


Version 0.9 -

- Compatible with game version 1.14 (Airports)
- Reconfigure UI for replacement in real-time
- Convert translation framework to CSV (for CrowdIn)