@@ -41,6 +41,8 @@
 "BOB_PNL_SCA","Prop and tree scaling"
 "BOB_PNL_APP","Apply and save changes"
 "BOB_PNL_REV","Revert"
+"BOB_PNL_ADD","Add new prop"
+"BOB_PNL_REM","Remove added prop"
 "BOB_PNL_REV_UND","Undo the selected replacement"
 "BOB_PNL_REV_TIP","Revert is not available as there is no active replacement for this item"
 "BOB_PNL_HID","Hide this item (sets probability to zero)"
@@ -96,6 +98,7 @@
 "BOB_OPT_RUI","Ruining"
 "BOB_OPT_WIR","Wires"
 "BOB_OPT_KEY","Hotkey"
+"BOB_OPT_DTK","Hotkey"
 "BOB_OPT_PRS","Press any key"
 "BOB_OPT_RGL","Changes will take effect on restart"
 "BOB_OPT_RRT","Prevent ruining by trees"
